# HoldSplitter

./: .gitignore  README.md  blender_script.py  main_script.py  phase1_init.py  phase2_separation.py  phase3_fitting.py  pyproject.toml  utils.py
.github/workflows/: codeql.yml  publish-to-pypi.yml
.harmon_ai/: README_template.md  repository_summary_raw.md  sections_template_llm.md
docs/: README.en.md
example/: demo.py
hold_splitter/: blender_script.py  blender_utils.py  cli.py  core.py  geometry.py  hold_isolator.py  main_script.py  visualization.py  wall_hold_splitter.py
