[tool.poetry]
name = "hold-splitter"
version = "0.1.0"
description = "クライミングウォールの平面を可視化するツール"
authors = ["Maki <sunwood.ai.labs@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.1"
open3d = "^0.18.0"
pymeshlab = "^2023.12.post1"
matplotlib = "^3.9.2"
loguru = "^0.7.2"
tqdm = "^4.64.1"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
hold-splitter = "hold_splitter.cli:main"
